comecei a escrever no conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTM 5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore magni accusantium quia quibusdam quo quam. Cum placeat culpa, perspiciatis non nemo fuga quas quia repudiandae ab vel nesciunt illo.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero voluptatibus fugiat ut delectus commodi dolor nostrum enim. Odio quia iure, at fuga sed nam earum neque modi, molestias deserunt repellat.</p>
         </article>
     </main>
 </body>
