--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Curso de HTM 5 com CSS3</h2>
+            <h2>Curso de HTML 5 com CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore magni accusantium quia quibusdam quo quam. Cum placeat culpa, perspiciatis non nemo fuga quas quia repudiandae ab vel nesciunt illo.</p>
         </article>
         <article>
